fix spacing issue

--- a/sass/modules/client-logo/_client-logo.scss
+++ b/sass/modules/client-logo/_client-logo.scss
@@ -1,19 +1,3 @@
-.client-logo-wrapper {
-  padding: 0 40px;
-  display: grid !important;
-  grid-template-columns: repeat(5, 1fr);
-  position: relative;
-  z-index: 5;
-
-  @include sm {
-    padding: 0 30px;
-    grid-template-columns: repeat(2, 1fr);
-  }
-  @include md {
-    padding: 0 30px;
-    grid-template-columns: repeat(3, 1fr);
-  }
-}
 .client-logo {
   padding-top: 20px;
   padding-bottom: 21px;
