--- a/sass/pages/_home-one.scss
+++ b/sass/pages/_home-one.scss
@@ -362,12 +362,11 @@
 // Review section
 .home-one-review {
   padding: 120px 0;
-  @include sm {
-    padding: 80px 0;
+
+  @include rmaxwd(991) {
+    padding: 80px 0 145px 0;
   }
-  @include md {
-    padding: 80px 0;
-  }
+
   .review-card {
     display: flex !important;
     align-items: end;
